--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -23,7 +23,7 @@ server {
     server_name back.freefish.love;
 
     location / {
-        proxy_pass https://back.freefish.love:9001;
+        proxy_pass http://back.freefish.love:9001/;
     }
 }
 
@@ -32,7 +32,7 @@ server {
     server_name gateway.freefish.love;
 
     location / {
-        proxy_pass https://gateway.freefish.love:9000;
+        proxy_pass http://gateway.freefish.love:9000/;
     }
 }
 
@@ -41,6 +41,6 @@ server {
     server_name interface.freefish.love;
 
     location / {
-        proxy_pass https://interface.freefish.love:9002;
+        proxy_pass http://interface.freefish.love:9002/;
     }
 }
