--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -16,6 +16,28 @@ server {
     location / {
         try_files $uri /index.html;
    }
+
+    #将请求转成https
+    rewrite ^(.*)$ https://$host$1 permanent;
+}
+
+server {
+    listen 443 ssl;
+    server_name freefish.love;
+    ssl_certificate /usr/cert/www.freefish.love_bundle.pem;
+    ssl_certificate_key /usr/cert/www.freefish.love.key;
+    ssl_session_timeout 5m;
+    #请按照以下协议配置
+    ssl_protocols TLSv1.2 TLSv1.3;
+    #请按照以下套件配置，配置加密套件，写法遵循 openssl 标准。
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE;
+    ssl_prefer_server_ciphers on;
+
+    root /usr/share/nginx/html;
+
+    location / {
+        try_files $uri /index.html;
+    }
 }
 
 server {
@@ -23,7 +45,7 @@ server {
     server_name back.freefish.love;
 
     location / {
-        proxy_pass http://back.freefish.love:9001/;
+        proxy_pass http://your_ip:9001/;
     }
 }
 
@@ -32,7 +54,7 @@ server {
     server_name gateway.freefish.love;
 
     location / {
-        proxy_pass http://gateway.freefish.love:9000/;
+        proxy_pass http://your_ip:9000/;
     }
 }
 
@@ -41,6 +63,6 @@ server {
     server_name interface.freefish.love;
 
     location / {
-        proxy_pass http://interface.freefish.love:9002/;
+        proxy_pass http://your_ip:9002/;
     }
 }
