--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,13 +3,13 @@ FROM nginx
 WORKDIR /usr/share/nginx/html/
 USER root
 
-COPY ./docker/nginx.conf /etc/nginx/conf.d/default.conf
-
-COPY ./dist  /usr/share/nginx/html/
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY dist .
+COPY cert /usr/cert
 
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
 
 # 构建：docker build -t freefish-api-frontend:v0.0.1 .
-# 运行：docker run -p 80:80 -d freefish-api-frontend:v0.0.1
+# 运行：docker run -p 80:80 -p 443:443 -d freefish-api-frontend:v0.0.1
