--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name freefish.love;
 
-    # gzip config
+    # gzip config 压缩网页，通过加载速度
     gzip on;
     gzip_min_length 1k;
     gzip_comp_level 9;
@@ -17,15 +17,24 @@ server {
         try_files $uri /index.html;
    }
 
-    # 将请求转成https
-    rewrite ^(.*)$ https://$host$1 permanent;
+    # 将请求重定向到 https
+    return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name freefish.love;
-    ssl_certificate /usr/cert/www.freefish.love_bundle.pem;
-    ssl_certificate_key /usr/cert/www.freefish.love.key;
+    server_name *.freefish.love;
+
+    # gzip config 压缩网页，通过加载速度
+    gzip on;
+    gzip_min_length 1k;
+    gzip_comp_level 9;
+    gzip_types text/plain text/css text/javascript application/json application/javascript application/x-javascript application/xml;
+    gzip_vary on;
+    gzip_disable "MSIE [1-6]\.";
+
+    ssl_certificate /usr/cert/freefish.love.pem;
+    ssl_certificate_key /usr/cert/freefish.love.key;
     ssl_session_timeout 5m;
     # 请按照以下协议配置
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -34,6 +43,7 @@ server {
     ssl_prefer_server_ciphers on;
 
     root /usr/share/nginx/html;
+    include /etc/nginx/mime.types;
 
     location / {
         try_files $uri /index.html;
@@ -45,7 +55,7 @@ server {
     server_name back.freefish.love;
 
     location / {
-        proxy_pass http://your_ip:9001/;
+        proxy_pass http://your_ip:9001;
     }
 }
 
@@ -54,7 +64,7 @@ server {
     server_name gateway.freefish.love;
 
     location / {
-        proxy_pass http://your_ip:9000/;
+        proxy_pass http://your_ip:9000;
     }
 }
 
@@ -63,6 +73,6 @@ server {
     server_name interface.freefish.love;
 
     location / {
-        proxy_pass http://your_ip:9002/;
+        proxy_pass http://your_ip:9002;
     }
 }
