--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -61,7 +61,7 @@ server {
 
 server {
     listen 80;
-    server_name gateway.freefish.love;
+    server_name api.freefish.love;
 
     location / {
         proxy_pass http://your_ip:9000;
